fix overflow in safari 10.1

--- a/website/static/separate-css/playground.css
+++ b/website/static/separate-css/playground.css
@@ -180,6 +180,7 @@ pre.CodeMirror-placeholder {
   display: none;
   box-sizing: border-box;
   width: 225px;
+  overflow-y: auto;
   border-bottom: 1px solid #ddd;
   border-right: 1px solid #ddd;
   flex: 0 1 auto;
